src/test/ui/const-generics/issues/issue-68366.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-68366.rs:12:37
   |
LL | impl <const N: usize> Collatz<{Some(N)}> {}
   |                                     ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error[E0207]: the const parameter `N` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-68366.rs:12:13
   |
LL | impl <const N: usize> Collatz<{Some(N)}> {}
   |             ^ unconstrained const parameter
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error[E0207]: the const parameter `N` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-68366.rs:18:12
   |
LL | impl<const N: usize> Foo {}
   |            ^ unconstrained const parameter
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0207`.
